加上文字圖片

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam nesciunt molestiae doloribus nobis enim commodi ut voluptate veniam maxime autem, quos, veritatis quidem labore perspiciatis magnam, praesentium itaque at quia?</p>
+    <img src="https://picsum.photos/id/684/600/400" alt="">
 </body>
 </html>
