--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    
 </head>
 <body>
     <h1>Hello World!</h1>
     <div class="picbox">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam nesciunt molestiae doloribus nobis enim commodi ut voluptate veniam maxime autem, quos, veritatis quidem labore perspiciatis magnam, praesentium itaque at quia?</p>
-        <img src="https://picsum.photos/id/684/600/400" alt="">
+        <img src="https://picsum.photos/id/684/600/400" alt="" class="img-thumbnail">
     </div>
     
 </body>
